# aaryan-nakhat-equity-research

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
docs/: ALERTS.md  ARCHITECTURE.md  DATA_SOURCES.md  FUNDAMENTALS.md  PLAN.md  REPORTS.md  SCRAPING.md  TECHNICAL.md
scripts/: backfill_eod.py  email_bot.py  forensic_report.py  fundamentals_report.py  ingest_eod.py  populate_watchlist.py  probe_bse_financials.py  probe_nse_browser.py  probe_nse_endpoints.py  probe_sources.py  research_report.py  run_bot.ps1  run_email_bot.ps1  run_scan_once.py  sector_report.py  technical_report.py  telegram_bot.py  valuation_report.py
src/equity_research/: ingest.py  scan.py  watchlist.py
src/equity_research/analysis/: alerts.py  forensic.py  fundamentals.py  positioning.py  quant.py  sector.py  technical.py  valuation.py
src/equity_research/common/: db.py  http.py
src/equity_research/reports/: brief.py  charts.py  deep_brief.py  email.py  glossary.py  inbox.py  pdf.py  pipeline.py  resolve.py  synthesize.py
src/equity_research/scrapers/: README.md  bse.py  fbil.py  mcx.py  nse_api.py  nse_archives.py  nse_financials.py
