[project]
name = "equity-research"
version = "0.1.0"
description = "Private equity-research workbench for Indian stocks (NSE/BSE) from primary/official sources."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Aaryan Nakhat", email = "aaryan.nakhat@gmail.com" }]
dependencies = [
    "scrapling[fetchers]>=0.4",
    "duckdb>=1.0",
    "pandas>=2.2",
    "lxml>=5.0",
    "google-genai>=1.0",
    "python-telegram-bot[job-queue]>=21.0",
    "telegramify-markdown>=1.2.0",
    "markdown>=3.10.2",
    "imapclient>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/equity_research"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
